# aswf-sample-project

./: .pre-commit-config.yaml  CONTRIBUTING.md  CTestConfig.cmake  CTestScript.cmake  README-example.md  SECURITY-example.md  SECURITY.md  azure-pipelines.yml
.github/workflows/: build.yaml  build.yml  build_documentation.yaml  cpp_ci.yml  pre-commit.yml  repolinter.yml
docs/: CMakeLists.txt  Doxyfile.in  TODO.md  conf.py  doxygen-stylesheet.css  index.rst
maintainers/: fetch_contributors.py
scripts/: build_documentation.sh  install_deps.sh  install_deps_centos_8.sh  install_deps_debian_10.sh  install_deps_macos_10.15.sh  install_deps_windows_2019.bat
src/: CMakeLists.txt  hello.cpp
tsc/: project_intake.md
tsc/meetings/: kickoff_meeting_agenda.md  yyyy-mm-dd.md
tsc/process/: release.md  security.md
